# NTRU-sampling

./: CMakeLists.txt  CPUCore.cmake  HaveCryptoExtensions.cmake  run_benchmarks.sh
PQC_NEON/neon/ntru/: CMakeLists.txt
PQC_NEON/neon/ntru/mmap/neon-hps2048509/: poly.c
PQC_NEON/neon/ntru/mmap/neon-hps2048677/: kem.c  owcpa.c
PQC_NEON/neon/ntru/mmap/neon-hps4096821/: kem.c  owcpa.c
PQC_NEON/neon/ntru/mmap/neon-hrss701/: kem.c  owcpa.c
PQC_NEON/neon/ntru/stack/neon-hps4096821/: params.h
jupyter/: NTRU-sampling.ipynb
speed_results_A53/: ntru:hps2048509:NG21:neon:shuffling:clang-17:DIT_OFF.txt  ntru:hps2048509:NG21:neon:sorting:clang-17:DIT_OFF.txt  ntru:hps2048677:CCHY23:tmvp:shuffling:clang-17:DIT_OFF.txt  ntru:hps2048677:CCHY23:tmvp:sorting:clang-17:DIT_OFF.txt  ntru:hps4096821:NG21:neon:shuffling:clang-17:DIT_OFF.txt  ntru:hps4096821:NG21:neon:sorting:clang-17:DIT_OFF.txt  ntru:hrss701:CCHY23:tmvp:clang-17:DIT_OFF.txt  sample_fixed_type:hps2048509:shuffling:clang-17:DIT_OFF.txt  sample_fixed_type:hps2048509:sorting:clang-17:DIT_OFF.txt  sample_fixed_type:hps2048677:shuffling:clang-17:DIT_OFF.txt  sample_fixed_type:hps2048677:sorting:clang-17:DIT_OFF.txt  sample_fixed_type:hps4096821:shuffling:clang-17:DIT_OFF.txt  sample_fixed_type:hps4096821:sorting:clang-17:DIT_OFF.txt
speed_results_A57/: ntru:hps2048509:NG21:neon:shuffling:clang-10:DIT_OFF.txt  ntru:hps2048509:NG21:neon:sorting:clang-10:DIT_OFF.txt  ntru:hps2048677:CCHY23:tmvp:shuffling:clang-10:DIT_OFF.txt  ntru:hps2048677:CCHY23:tmvp:sorting:clang-10:DIT_OFF.txt  ntru:hps4096821:NG21:neon:shuffling:clang-10:DIT_OFF.txt  ntru:hps4096821:NG21:neon:sorting:clang-10:DIT_OFF.txt  ntru:hrss701:CCHY23:tmvp:clang-10:DIT_OFF.txt  sample_fixed_type:hps2048509:shuffling:clang-10:DIT_OFF.txt  sample_fixed_type:hps2048509:sorting:clang-10:DIT_OFF.txt  sample_fixed_type:hps2048677:shuffling:clang-10:DIT_OFF.txt  sample_fixed_type:hps2048677:sorting:clang-10:DIT_OFF.txt  sample_fixed_type:hps4096821:shuffling:clang-10:DIT_OFF.txt  sample_fixed_type:hps4096821:sorting:clang-10:DIT_OFF.txt
speed_results_A72/: ntru:hps2048509:NG21:neon:shuffling:clang-17:DIT_OFF.txt  ntru:hps2048509:NG21:neon:sorting:clang-17:DIT_OFF.txt  ntru:hps2048677:CCHY23:tmvp:shuffling:clang-17:DIT_OFF.txt  ntru:hps2048677:CCHY23:tmvp:sorting:clang-17:DIT_OFF.txt  ntru:hps4096821:NG21:neon:shuffling:clang-17:DIT_OFF.txt  ntru:hps4096821:NG21:neon:sorting:clang-17:DIT_OFF.txt  ntru:hrss701:CCHY23:tmvp:clang-17:DIT_OFF.txt  sample_fixed_type:hps2048509:shuffling:clang-17:DIT_OFF.txt  sample_fixed_type:hps2048509:sorting:clang-17:DIT_OFF.txt  sample_fixed_type:hps2048677:shuffling:clang-17:DIT_OFF.txt  sample_fixed_type:hps2048677:sorting:clang-17:DIT_OFF.txt  sample_fixed_type:hps4096821:shuffling:clang-17:DIT_OFF.txt  sample_fixed_type:hps4096821:sorting:clang-17:DIT_OFF.txt
speed_results_M1/: ntru:hps2048509:NG21:amx:shuffling:clang:DIT_OFF.txt  ntru:hps2048509:NG21:amx:shuffling:clang:DIT_ON.txt  ntru:hps2048509:NG21:amx:sorting:clang:DIT_OFF.txt  ntru:hps2048509:NG21:amx:sorting:clang:DIT_ON.txt  ntru:hps2048509:NG21:neon:shuffling:clang:DIT_OFF.txt  ntru:hps2048509:NG21:neon:shuffling:clang:DIT_ON.txt  ntru:hps2048509:NG21:neon:sorting:clang:DIT_OFF.txt  ntru:hps2048509:NG21:neon:sorting:clang:DIT_ON.txt  ntru:hps2048677:CCHY23:amx:shuffling:clang:DIT_OFF.txt  ntru:hps2048677:CCHY23:amx:shuffling:clang:DIT_ON.txt  ntru:hps2048677:CCHY23:amx:sorting:clang:DIT_OFF.txt  ntru:hps2048677:CCHY23:amx:sorting:clang:DIT_ON.txt  ntru:hps2048677:CCHY23:tmvp:shuffling:clang:DIT_OFF.txt  ntru:hps2048677:CCHY23:tmvp:shuffling:clang:DIT_ON.txt  ntru:hps2048677:CCHY23:tmvp:sorting:clang:DIT_OFF.txt  ntru:hps2048677:CCHY23:tmvp:sorting:clang:DIT_ON.txt  ntru:hps4096821:NG21:amx:shuffling:clang:DIT_OFF.txt  ntru:hps4096821:NG21:amx:shuffling:clang:DIT_ON.txt  ntru:hps4096821:NG21:amx:sorting:clang:DIT_OFF.txt  ntru:hps4096821:NG21:amx:sorting:clang:DIT_ON.txt  ntru:hps4096821:NG21:neon:shuffling:clang:DIT_OFF.txt  ntru:hps4096821:NG21:neon:shuffling:clang:DIT_ON.txt  ntru:hps4096821:NG21:neon:sorting:clang:DIT_OFF.txt  ntru:hps4096821:NG21:neon:sorting:clang:DIT_ON.txt  ntru:hrss701:CCHY23:amx:clang:DIT_OFF.txt  ntru:hrss701:CCHY23:amx:clang:DIT_ON.txt  ntru:hrss701:CCHY23:tmvp:clang:DIT_OFF.txt  ntru:hrss701:CCHY23:tmvp:clang:DIT_ON.txt  sample_fixed_type:hps2048509:shuffling:clang:DIT_OFF.txt  sample_fixed_type:hps2048509:shuffling:clang:DIT_ON.txt  sample_fixed_type:hps2048509:sorting:clang:DIT_OFF.txt  sample_fixed_type:hps2048509:sorting:clang:DIT_ON.txt  sample_fixed_type:hps2048677:shuffling:clang:DIT_OFF.txt  sample_fixed_type:hps2048677:shuffling:clang:DIT_ON.txt  sample_fixed_type:hps2048677:sorting:clang:DIT_OFF.txt  sample_fixed_type:hps2048677:sorting:clang:DIT_ON.txt  sample_fixed_type:hps4096821:shuffling:clang:DIT_OFF.txt  sample_fixed_type:hps4096821:shuffling:clang:DIT_ON.txt  sample_fixed_type:hps4096821:sorting:clang:DIT_OFF.txt  sample_fixed_type:hps4096821:sorting:clang:DIT_ON.txt
speed_results_M3/: ntru:hps2048509:NG21:amx:shuffling:clang:DIT_OFF.txt  ntru:hps2048509:NG21:amx:shuffling:clang:DIT_ON.txt  ntru:hps2048509:NG21:amx:sorting:clang:DIT_OFF.txt  ntru:hps2048509:NG21:amx:sorting:clang:DIT_ON.txt  ntru:hps2048509:NG21:neon:shuffling:clang:DIT_OFF.txt  ntru:hps2048509:NG21:neon:shuffling:clang:DIT_ON.txt  ntru:hps2048509:NG21:neon:sorting:clang:DIT_OFF.txt  ntru:hps2048509:NG21:neon:sorting:clang:DIT_ON.txt  ntru:hps2048677:CCHY23:amx:shuffling:clang:DIT_OFF.txt  ntru:hps2048677:CCHY23:amx:shuffling:clang:DIT_ON.txt  ntru:hps2048677:CCHY23:amx:sorting:clang:DIT_OFF.txt  ntru:hps2048677:CCHY23:amx:sorting:clang:DIT_ON.txt  (+28 more)
vector-polymul-ntru-ntrup/: CMakeLists.txt
vector-polymul-ntru-ntrup/ntruhps2048677/mmap/aarch64_amx/: owcpa.c  poly.c
vector-polymul-ntru-ntrup/ntruhps2048677/stack/aarch64_tc/: poly.h
vector-polymul-ntru-ntrup/ntruhps2048677/stack/aarch64_tmvp/: params.h  poly.h
vector-polymul-ntru-ntrup/ntruhrss701/mmap/aarch64_amx/: kem.c  owcpa.c
vector-polymul-ntru-ntrup/ntruhrss701/stack/aarch64_tmvp/: poly.h
(+16 files in other folders)
